Add group admin to account

--- a/envs/local.env
+++ b/envs/local.env
@@ -1,2 +1,2 @@
 DEBUG=1
-PGURL="postgresql://postgres@localhost/{{ project_name }}"
+DATABASE_URL="postgresql://postgres@localhost/{{ project_name }}"
