Add password reset api endpoints

--- a/envs/local.env
+++ b/envs/local.env
@@ -1,2 +1,3 @@
 DEBUG=1
 DATABASE_URL="postgresql://postgres@localhost/{{ project_name }}"
+PASSWORD_RESET_URL="http://localhost:8080/#/password/reset"
