--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-storages==1.12.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 drf-spectacular==0.21.0
+google-auth==2.3.3
 psycopg2-binary==2.9.2
 PyJWT==2.1.0
 PyYAML==6.0
