--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-Django==3.2.9
+Django==3.2.10
 django-admin-interface==0.18.2
-django-cors-headers==3.10.0
+django-cors-headers==3.10.1
 django-environ==0.8.1
-django-imagefield==0.13.4
-django-maintenance-mode==0.16.1
+django-imagefield==0.13.5
+django-maintenance-mode==0.16.2
 django-reversion==4.0.1
 django-storages==1.12.3
-djangorestframework==3.12.4
+djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
-drf-spectacular==0.21.0
+drf-spectacular==0.21.1
 google-auth==2.3.3
 psycopg2==2.8.6 # Must match package py3-psycopg2 in alpine:3.14
-PyJWT==2.1.0
+PyJWT==2.3.0
 PyYAML==6.0
+pymemcache==3.5.0
 requests==2.26.0
-sentry-sdk==1.5.0
+sentry-sdk==1.5.1
 whitenoise==5.3.0
