--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,6 +16,6 @@ server {
 
     location /media/ {
         autoindex on;
-        alias /srv/media/;
+        alias /usr/share/nginx/media/;
     }
 }
