--- a/envs/linux_local.env
+++ b/envs/linux_local.env
@@ -1,3 +1,4 @@
 DEBUG=1
+HOST_URL="http://localhost:8000"
 DATABASE_URL="postgresql://{{ USER }}//var/run/postgresql/{{ project_name }}"
 PASSWORD_RESET_URL="http://localhost:8080/#/password/reset"
