--- a/envs/local.env
+++ b/envs/local.env
@@ -1,3 +1,4 @@
 DEBUG=1
+HOST_URL="http://localhost:8000"
 DATABASE_URL="postgresql://postgres@localhost/{{ project_name }}"
 PASSWORD_RESET_URL="http://localhost:8080/#/password/reset"
