--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.1.7
 django-admin-interface==0.24.2
+django-admin-ordering==0.16.1
 django-cors-headers==3.14.0
 django-environ==0.10.0
 django-maintenance-mode==0.18.0
